[gd_scene load_steps=6 format=3 uid="uid://c0vfowk6bwjr8"]

[ext_resource type="Script" path="res://objs/house_small/house_small.gd" id="1_bfuu5"]
[ext_resource type="PackedScene" uid="uid://bccpaondqqptg" path="res://assets/3d/houses/house_small.blend" id="1_smmhu"]
[ext_resource type="PackedScene" uid="uid://dahvs23usvcvn" path="res://assets/3d/house_arrow/house_arrow.blend" id="4_sg8r7"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ouf7k"]

[sub_resource type="BoxShape3D" id="BoxShape3D_4eejk"]
size = Vector3(4, 6, 4)

[node name="house_small" type="Node3D"]
script = ExtResource("1_bfuu5")

[node name="mesh" parent="." instance=ExtResource("1_smmhu")]

[node name="delivery_area" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -3)
collision_layer = 2

[node name="collision" type="CollisionShape3D" parent="delivery_area"]
shape = SubResource("BoxShape3D_ouf7k")

[node name="boxes" type="Node3D" parent="delivery_area"]

[node name="selection_area" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
collision_layer = 4
collision_mask = 0

[node name="collision" type="CollisionShape3D" parent="selection_area"]
shape = SubResource("BoxShape3D_4eejk")

[node name="house_arrow" parent="." instance=ExtResource("4_sg8r7")]
transform = Transform3D(0.69, 0, 0, 0, 0.69, 0, 0, 0, 0.69, 0, 9.31911, 0)
visible = false

[node name="remove_delivery_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="mouse_entered" from="selection_area" to="." method="_on_selection_area_mouse_entered"]
[connection signal="mouse_exited" from="selection_area" to="." method="_on_selection_area_mouse_exited"]
[connection signal="timeout" from="remove_delivery_timer" to="." method="_on_remove_delivery_timer_timeout"]
